syntax = "proto3";

package users;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserList {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message GetSingleUserRequest {
  int32 id = 1;
}

message GetUserRequest {}

message Empty {}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetSingleUser (GetSingleUserRequest) returns (User);
  rpc GetAllUsers (Empty) returns (UserList);
}
